--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre-8.0.232.09-hotspot">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
@@ -13,8 +14,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aopalliance-repackaged-2.4.0-b31.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/asm-debug-all-5.0.4.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.8.6.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/guava-23.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-api-2.4.0-b31.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-locator-2.4.0-b31.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-utils-2.4.0-b31.jar"/>
