--- a/.classpath
+++ b/.classpath
@@ -46,5 +46,6 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/apache-commons-lang.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
